[gd_scene load_steps=9 format=2]

[ext_resource path="res://Graphics/Characters/Shadow.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Characters/Shadow.gd" type="Script" id=2]
[ext_resource path="res://Graphics/blind_effect.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "down"
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 2, 23, 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "left"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=4]
resource_name = "right"
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 14 ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 6, 19, 6 ]
}

[node name="Shadow" type="KinematicBody2D"]
motion/sync_to_physics = true
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_smoothed = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 3
hframes = 8

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HouseDialog" type="ConfirmationDialog" parent="CanvasLayer"]
pause_mode = 2
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.0
margin_top = -37.5
margin_right = 63.0
margin_bottom = 37.5
window_title = "Question"
dialog_text = "Do you want to enter this house"
dialog_autowrap = true

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blind_effect" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.2
anims/down = SubResource( 2 )
anims/left = SubResource( 3 )
anims/right = SubResource( 4 )
anims/up = SubResource( 5 )
[connection signal="confirmed" from="CanvasLayer/HouseDialog" to="." method="_on_HouseDialog_confirmed"]
[connection signal="popup_hide" from="CanvasLayer/HouseDialog" to="." method="_on_HouseDialog_popup_hide"]
